// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fmBCVi dwxdYI"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu cGgNNs sc-jvvksu iZWZbd sc-edERGn kyDWed"
    >
      <h3
        class="sc-gWXbKe gGPSCF sc-cCcXHH hYTSJh"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fmBCVi dwxdYI"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu cGgNNs sc-jvvksu rvCKa sc-edERGn kyDWed"
    >
      <h3
        class="sc-gWXbKe gGPSCF sc-cCcXHH hYTSJh"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
